# python-ooolib

./: .gitignore  .travis.yml  ChangeLog  F10.ods  LICENSE  MANIFEST.in  README  README.md  README.rst  content.xml  podobne-projekty.txt  poznamky.txt  row-col-spans-2.ods  row-col-spans-2.xml  runtest.py  runtest2.py  runtest3.py  runtest4.py  setup.cfg  setup.py  spreadsheet-example.xml  table.xml  tox.ini  zkouska.py  zkouska_ng.py
examples/: calc-example01.py  calc-example02.py  calc-example03.py  calc-example04.py  calc-example05.py  calc-example06.py  calc-example07.py  calc-example08.py  calc-example09.py  writer-example01.py
ooolib/: __init__.py  calc.py  content.py  document.py  exceptions.py  manifest.py  meta.py  mixin.py  settings.py  spreadsheet.py  styles.py  write.py
ooolib/current_templates/: content-f.xml  meta-f.xml  settings-f.xml  styles-f.xml
ooolib/template/: content-f.xml  content.xml  meta-f.xml  meta.xml  settings-f.xml  settings.xml  styles-f.xml  styles.xml
ooolib/tests/: test_calc_cell.py  utils.py
ooolib/tests/fixtures/: test-cells.ods
