[metadata]
name = ooolib-python
version = attr: ooolib.version.VERSION
author = Zdeněk Böhm, Joseph Colton
author_email = zdenek.bohm@nic.cz, joseph@colton.byuh.edu
maintainer = Zdeněk Böhm
maintainer_email = zdenek.bohm@nic.cz
url = https://github.com/zbohm/python-ooolib
description = Package for creating OpenDocument Format(ODF) spreadsheets.
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
include_package_data = true
packages = find:
install_requires =
zip_safe = false

[options.extras_require]
quality =
    flake8
    isort
    mypy
    pydocstyle
test =

[isort]
line_length = 120
known_first_party = ooolib
default_section = THIRDPARTY

[flake8]
max-line-length = 120
max-complexity = 15

[pydocstyle]
add_select = D204,D400,D401
add_ignore = D1

[mypy]
check_untyped_defs = true
ignore_missing_imports = true
